--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             // 从URL参数获取跳转链接
             const urlParams = new URLSearchParams(window.location.search);
             const targetUrlParam = urlParams.get('url');
-            let targetUrl = 'http://zk143.test.upcdn.net/';
+            let targetUrl = 'https://zk563.netlify.app';
             
             if (targetUrlParam) {
                 try {
